--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev:api:watch": "cargo watch -x run"
   },
   "dependencies": {
+    "@xyflow/react": "^12.8.5",
     "framer-motion": "^12.10.4",
     "lucide-react": "^0.508.0",
     "react": "^19.0.0",
