--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
 base64 = "0.22"
 tower = { version = "0.4", features = ["util"] }
 tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1"
+async-stream = "0.3"
 sqlx = { version = "0.8", features = [ "runtime-tokio", "uuid", "postgres", "time", "chrono", "derive" ] }
 dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
