Implementation for Security and Egress, HMAC for webhooks, secret masking

--- a/.env.template
+++ b/.env.template
@@ -36,3 +36,5 @@ RUN_RETENTION_DAYS=30 # retention purge window
 # use false to disable sse and just use rest: WORKER_USE_LEASES=false
 # Optional: Allowlisted domains for HTTP action (future use)
 # ALLOWED_HTTP_DOMAINS=httpbin.org,api.example.com
+ALLOWED_HTTP_DOMAINS= # global comma‑separated host list (e.g., api.github.com,*.mycorp.com)
+MASK_SECRETS= # comma‑separated tokens to redact in outputs
