--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,8 @@ reqwest = { version = "0.12.15", features = ["json"] }
 urlencoding = "2"
 hmac = "0.12"
 sha2 = "0.10"
+hex = "0.4"
+subtle = "2"
 
 [dev-dependencies]
 hyper = "1"
