Implement dlq and egress clearing with concurrency

--- a/.env.template
+++ b/.env.template
@@ -33,8 +33,16 @@ RATE_LIMITER_AUTH_BURST=15
 WORKER_USE_LEASES=true # enable leases/concurrency path
 WORKER_LEASE_SECONDS=15 # heartbeat/lease duration
 RUN_RETENTION_DAYS=30 # retention purge window
-# use false to disable sse and just use rest: WORKER_USE_LEASES=false
-# Optional: Allowlisted domains for HTTP action (future use)
-# ALLOWED_HTTP_DOMAINS=httpbin.org,api.example.com
-ALLOWED_HTTP_DOMAINS= # global comma‑separated host list (e.g., api.github.com,*.mycorp.com)
-MASK_SECRETS= # comma‑separated tokens to redact in outputs
+# Egress control
+# Global allowlist: unioned with per-workflow allowlist; leave empty to allow any (unless default-deny is on)
+ALLOWED_HTTP_DOMAINS=
+# Global denylist: always blocks, even if present in a workflow allowlist
+DISALLOWED_HTTP_DOMAINS=
+# Default-deny toggle: when true, only hosts in union(per-workflow, global) are allowed
+EGRESS_DEFAULT_DENY=false
+# Secrets masking: comma-separated tokens to redact in outputs/logs
+MASK_SECRETS=
+
+# Security hardening: when ENV=production, built-in SSRF protections block localhost,
+# RFC1918, link-local, and common metadata endpoints.
+
