--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -30,6 +30,7 @@ chrono = "0.4"
 rand = "0.9.1"
 uuid = { version = "1.16.0", features = ["serde", "v4"] }
 time = { version = "0.3.41", features = ["serde"] }
+chrono-tz = "0.8"
 lettre = { version = "0.11", default-features = false, features = [
   "builder",
   "smtp-transport",
