--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,6 +17,7 @@ sqlx = { version = "0.8", features = [ "runtime-tokio", "uuid", "postgres", "tim
 dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+boa_engine = "0.17"
 tracing = "0.1"
 tracing-subscriber = "0.3"  # update to match sqlx and tracing ecosystem
 tower-http = { version = "0.6.4", features = ["cors", "trace"] }
