--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,6 +9,8 @@ async-trait = "0.1"
 axum = { version = "0.8.4", features = ["macros"] }
 axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
 base64 = "0.22"
+aes-gcm = { version = "0.10", features = ["std"] }
+thiserror = "1"
 tower = { version = "0.4", features = ["util"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
