--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -15,6 +15,7 @@ tower = { version = "0.4", features = ["util"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 async-stream = "0.3"
+dashmap = "5.5"
 sqlx = { version = "0.8", features = [ "runtime-tokio", "uuid", "postgres", "time", "chrono", "derive" ] }
 dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
