Corrected url settings for slack oauth

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -46,3 +46,73 @@ MASK_SECRETS=
 # Security hardening: when ENV=production, built-in SSRF protections block localhost,
 # RFC1918, link-local, and common metadata endpoints.
 
+
+#.env below replace info
+#DATABASE_URL=
+#FRONTEND_ORIGIN=
+#SMTP_USERNAME=
+#SMTP_PASSWORD=
+#SMTP_HOST=
+#SMTP_FROM=
+#SMTP_TLS_DISABLED=
+#SMTP_PORT=1025
+#API_DEV_URL=
+#API_PROD_URL=
+#EMAIL_VERIFICATION_PATH=
+#RESET_PASSWORD_PATH=
+#JWT_SECRET=
+#ENV=development
+#DEV_CERT_LOCATION=
+#DEV_KEY_LOCATION=
+#WEBHOOK_SECRET=
+#GOOGLE_CLIENT_ID=
+#GOOGLE_CLIENT_SECRET=
+#GOOGLE_REDIRECT_URI=
+#GOOGLE_ACCOUNTS_OAUTH_API_BASE=
+#GOOGLE_ACCOUNTS_OAUTH_TOKEN_CLIENT_URL=
+#GOOGLE_ACCOUNTS_OAUTH_USER_INFO_URL=
+#GITHUB_CLIENT_SECRET=
+#GITHUB_CLIENT_ID=
+#GITHUB_REDIRECT_URI=
+#GITHUB_OAUTH_SCOPE=
+#GITHUB_OAUTH_TOKEN_URL=
+#RATE_LIMITER_MILLISECONDS=
+#RATE_LIMITER_BURST=
+#RATE_LIMITER_AUTH_SECONDS=
+#RATE_LIMITER_AUTH_BURST=
+#WORKER_USE_LEASES= # enable leases/concurrency path
+#WORKER_LEASE_SECONDS= # heartbeat/lease duration
+#RUN_RETENTION_DAYS= # retention purge window
+# use false to disable sse and just use rest: WORKER_USE_LEASES=false
+# Optional: Allowlisted domains for HTTP action (future use)
+# ALLOWED_HTTP_DOMAINS=httpbin.org,api.example.com
+#ALLOWED_HTTP_DOMAINS=
+# Global denylist: always blocks, even if present in a workflow allowlist
+#DISALLOWED_HTTP_DOMAINS=
+# Default-deny toggle: when true, only hosts in union(per-workflow, global) are allowed
+#EGRESS_DEFAULT_DENY=true
+# Secrets masking: comma-separated tokens to redact in outputs/logs
+#MASK_SECRETS=
+#TEAMS_OAUTH_TOKEN_BASE_URL=
+#TEAMS_GRAPH_BASE_URL=
+#TEAMS_WORKFLOW_OAUTH_URL=
+#TEAMS_OAUTH_SCOPE=
+
+##### FOR INTEGRATIONS OPTIONS TAB ##########
+#MICROSOFT_INTEGRATIONS_CLIENT_ID=
+#MICROSOFT_INTEGRATIONS_CLIENT_SECRET=
+#MICROSOFT_INTEGRATIONS_REDIRECT_URI=
+#GOOGLE_INTEGRATIONS_CLIENT_ID=
+#GOOGLE_INTEGRATIONS_CLIENT_SECRET=
+#GOOGLE_INTEGRATIONS_REDIRECT_URI=
+#OAUTH_TOKEN_ENCRYPTION_KEY=
+#SLACK_INTEGRATIONS_CLIENT_ID=9737696475138.
+#SLACK_INTEGRATIONS_CLIENT_SECRET=
+#SLACK_INTEGRATIONS_REDIRECT_URI=
+#################################
+
+#### Plan Pricing
+#WORKSPACE_PLAN_PRICE=\$29/mo
+#ORGANIZATION_PLAN_PRICE=\$99/mo
+#################
+
