Implemented Stripe integration
Update Config for Stripe integration

Add Stripe service integration

Add StripeService to AppState

Revert "Add StripeService to AppState"

This reverts commit 5248c03a3b2bc5a9e3f68e7fe4321b169b7bca93.

Revert "Add Stripe service integration"

This reverts commit 81d341206e78e305e7fed287f49d39662335dbff.

stripe implementation docs

Add stripe service integration and implement into AppState

Finalize workspace upgrades on Stripe success

Implement Stripe payment failure recovery

Finalize workspace upgrades on Stripe success

Add tests for Stripe checkout and webhook flows

Implemented Stripe frontend billing

Complete Stripe integration

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -15,6 +15,10 @@ ENV=development
 DEV_CERT_LOCATION=../../../certs/localhost+2.pem
 DEV_KEY_LOCATION=../../../certs/localhost+2-key.pem
 WEBHOOK_SECRET=dev-change-me-please-32-bytes-min
+STRIPE_CLIENT_ID=stripe_client_id
+STRIPE_SECRET_KEY=stripe_secret_key
+STRIPE_WEBHOOK_SECRET=stripe_webhook_secret
+STRIPE_WORKSPACE_PRICE_ID=price_1234567890abcdef
 GOOGLE_CLIENT_ID=google_client_id
 GOOGLE_CLIENT_SECRET=secret
 GOOGLE_REDIRECT_URI=https://localhost:3000/api/auth/google-callback
@@ -65,6 +69,9 @@ MASK_SECRETS=
 #DEV_CERT_LOCATION=
 #DEV_KEY_LOCATION=
 #WEBHOOK_SECRET=
+#STRIPE_CLIENT_ID=
+#STRIPE_SECRET_KEY=
+#STRIPE_WEBHOOK_SECRET=
 #GOOGLE_CLIENT_ID=
 #GOOGLE_CLIENT_SECRET=
 #GOOGLE_REDIRECT_URI=
