clear workspace warning. Update .env.template

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -12,15 +12,13 @@ API_DEV_URL=https://localhost:3000
 API_PROD_URL=https://api.dsentr.com
 EMAIL_VERIFICATION_PATH=/verify-email?token=
 RESET_PASSWORD_PATH=/reset-password/
+JWT_ISSUER=https://localhost:3000
+JWT_AUDIENCE=https://localhost:5173
 JWT_SECRET=CHANGEME_JWT_SECRET # Generate unique secret per environment through vault tooling
 ENV=development
 DEV_CERT_LOCATION=../../../certs/localhost+2.pem
 DEV_KEY_LOCATION=../../../certs/localhost+2-key.pem
 WEBHOOK_SECRET=CHANGEME_WEBHOOK_SIGNING_SECRET # Issue via vault; 32+ random bytes and 8+ unique chars
-STRIPE_CLIENT_ID=CHANGEME_STRIPE_CLIENT_ID # Request from billing owner; store only in vault
-STRIPE_SECRET_KEY=CHANGEME_STRIPE_SECRET_KEY # Managed secret; rotate if exposed
-STRIPE_WEBHOOK_SECRET=CHANGEME_STRIPE_WEBHOOK_SECRET # Sync from Stripe dashboard via vault
-STRIPE_WORKSPACE_PRICE_ID=price_1234567890abcdef
 GOOGLE_CLIENT_ID=CHANGEME_GOOGLE_CLIENT_ID # Create OAuth client per environment
 GOOGLE_CLIENT_SECRET=CHANGEME_GOOGLE_CLIENT_SECRET # Store only in managed secret vault
 GOOGLE_REDIRECT_URI=https://localhost:3000/api/auth/google-callback
@@ -49,46 +47,41 @@ EGRESS_DEFAULT_DENY=false
 # Secrets masking: comma-separated tokens to redact in outputs/logs
 MASK_SECRETS=
 
+TEAMS_OAUTH_TOKEN_BASE_URL=https://login.microsoftonline.com
+TEAMS_GRAPH_BASE_URL=https://graph.microsoft.com
+TEAMS_WORKFLOW_OAUTH_URL=/v1.0/teams/{teamId}/channels/{channelId}/messages
+TEAMS_OAUTH_SCOPE=https://graph.microsoft.com/.default
+
+##### FOR INTEGRATIONS OPTIONS TAB ##########
+MICROSOFT_INTEGRATIONS_CLIENT_ID=
+MICROSOFT_INTEGRATIONS_CLIENT_SECRET=
+MICROSOFT_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/microsoft/callback
+GOOGLE_INTEGRATIONS_CLIENT_ID=
+GOOGLE_INTEGRATIONS_CLIENT_SECRET=
+GOOGLE_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/google/callback
+OAUTH_TOKEN_ENCRYPTION_KEY=
+SLACK_INTEGRATIONS_CLIENT_ID=
+SLACK_INTEGRATIONS_CLIENT_SECRET=
+SLACK_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/slack/callback
+#################################
+
+#### Plan Pricing
+WORKSPACE_PLAN_PRICE=\$29/mo
+#################
+
+#### Stripe Integration
+STRIPE_CLIENT_ID=
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_WORKSPACE_PRICE_ID=
+#################
+
 # Security hardening: when ENV=production, built-in SSRF protections block localhost,
 # RFC1918, link-local, and common metadata endpoints.
 
 
 #.env below replace info
-#DATABASE_URL=
-#FRONTEND_ORIGIN=
-#SMTP_USERNAME=
-#SMTP_PASSWORD=
-#SMTP_HOST=
-#SMTP_FROM=
-#SMTP_TLS_DISABLED=
-#SMTP_PORT=1025
-#API_DEV_URL=
-#API_PROD_URL=
-#EMAIL_VERIFICATION_PATH=
-#RESET_PASSWORD_PATH=
-#JWT_SECRET=
-#ENV=development
-#DEV_CERT_LOCATION=
-#DEV_KEY_LOCATION=
-#WEBHOOK_SECRET=
-#STRIPE_CLIENT_ID=
-#STRIPE_SECRET_KEY=
-#STRIPE_WEBHOOK_SECRET=
-#GOOGLE_CLIENT_ID=
-#GOOGLE_CLIENT_SECRET=
-#GOOGLE_REDIRECT_URI=
-#GOOGLE_ACCOUNTS_OAUTH_API_BASE=
-#GOOGLE_ACCOUNTS_OAUTH_TOKEN_CLIENT_URL=
-#GOOGLE_ACCOUNTS_OAUTH_USER_INFO_URL=
-#GITHUB_CLIENT_SECRET=
-#GITHUB_CLIENT_ID=
-#GITHUB_REDIRECT_URI=
-#GITHUB_OAUTH_SCOPE=
-#GITHUB_OAUTH_TOKEN_URL=
-#RATE_LIMITER_MILLISECONDS=
-#RATE_LIMITER_BURST=
-#RATE_LIMITER_AUTH_SECONDS=
-#RATE_LIMITER_AUTH_BURST=
+
 #WORKER_USE_LEASES= # enable leases/concurrency path
 #WORKER_LEASE_SECONDS= # heartbeat/lease duration
 #RUN_RETENTION_DAYS= # retention purge window
