Tx for deploy port

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,4 +1,5 @@
 # Refer to SECURITY.md for provisioning and rotation requirements before setting live credentials.
+PORT=3000
 DATABASE_URL=postgres://CHANGEME_DB_USER:CHANGEME_DB_PASSWORD@localhost/CHANGEME_DB_NAME # Managed via vault per SECURITY.md
 FRONTEND_ORIGIN=https://localhost:5173
 AUTH_COOKIE_SECURE=false # Force true in production to send cookies only over HTTPS
