--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -1,38 +1,35 @@
-name: Deploy Frontend
+name: Frontend Build Check
 
 on:
   push:
     branches: [master]
-  pull_request:
-    branches: [master]
-
-permissions:
-  contents: read
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: frontend
     env:
       VITE_API_BASE_URL: https://api.dsentr.com
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: npm
+          cache-dependency-path: frontend/package-lock.json
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install deps
+        run: |
+          cd frontend
+          npm ci
 
-      - name: Build site
-        run: npm run build
+      - name: Build
+        run: |
+          cd frontend
+          npm run build
 
       # - name: Publish to Cloudflare Pages
       #   uses: cloudflare/pages-action@v1
