--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -20,6 +20,9 @@ jobs:
           node-version: 22
           cache: npm
           cache-dependency-path: frontend/package-lock.json
+      
+      - name: Clean npm cache
+        run: npm cache clean --force
 
       - name: Install deps
         run: |
