add ci lint and tests

--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -28,6 +28,16 @@ jobs:
         run: |
           cd frontend
           npm ci
+          
+      - name: Lint
+        run: |
+          cd frontend
+          npm run lint
+
+      - name: Test
+        run: |
+          cd frontend
+          npm test -- --watch=false
 
       - name: Build
         run: |
