--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -44,11 +44,8 @@ jobs:
           cd frontend
           npm run build
 
-      # - name: Publish to Cloudflare Pages
-      #   uses: cloudflare/pages-action@v1
-      #   with:
-      #     apiToken: ${{ secrets.CF_API_TOKEN }}
-      #     accountId: ${{ secrets.CF_ACCOUNT_ID }}
-      #     projectName: ${{ secrets.CF_PAGES_PROJECT }}
-      #     directory: dist
-      #     gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+      - name: Trigger Cloudflare Pages Deploy
+        if: success()  # only after build passes
+        run: |
+          curl -fsS -X POST "${{ secrets.CF_PAGES_DEPLOY_HOOK_URL }}"
+
