--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.4.1",
+    "vite-plugin-compression": "^0.5.1",
     "vitest": "^3.1.2"
   }
 }
