Added sendgrid api as app internal mailer

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -9,6 +9,12 @@ SMTP_HOST=localhost
 SMTP_FROM=CHANGEME_SMTP_FROM # Configure sender per environment; avoid reusing production identity
 SMTP_TLS_DISABLED=true
 SMTP_PORT=1025
+# App email transport selector: 'smtp' (default) or 'sendgrid'
+EMAIL_PROVIDER=smtp
+# Generic sender address for API-based providers; falls back to SMTP_FROM if unset
+EMAIL_FROM=
+# API key for SendGrid when EMAIL_PROVIDER=sendgrid
+SENDGRID_API_KEY=
 API_DEV_URL=https://localhost:3000
 API_PROD_URL=https://api.dsentr.com
 EMAIL_VERIFICATION_PATH=/verify-email?token=
