--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@stripe/stripe-js": "^4.8.0",
     "@xyflow/react": "^12.8.5",
+    "acorn": "^8.15.0",
     "framer-motion": "^12.10.4",
     "lucide-react": "^0.508.0",
     "react": "^19.0.0",
