--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -53,6 +53,8 @@ sha2 = "0.10"
 hex = "0.4"
 subtle = "2"
 stripe = { package = "async-stripe", version = "0.41.0", default-features = false, features = ["runtime-tokio-hyper", "checkout", "webhook-events", "connect"] }
+sentry = "0.45.0"
+sentry-tracing = "0.45.0"
 
 [dev-dependencies]
 hyper = "1"
