Added mailjet as a platform pluggable mailer

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -15,6 +15,11 @@ EMAIL_PROVIDER=smtp
 EMAIL_FROM=
 # API key for SendGrid when EMAIL_PROVIDER=sendgrid
 SENDGRID_API_KEY=
+# Pluggable platform options for Mailjet
+MAILJET_API_KEY=xxxx
+MAILJET_SECRET_KEY=yyyy
+MAILJET_FROM_EMAIL=no-reply@dsentr.com
+MAILJET_FROM_NAME=DSentr Automation
 API_DEV_URL=https://localhost:3000
 API_PROD_URL=https://api.dsentr.com
 EMAIL_VERIFICATION_PATH=/verify-email?token=
