--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,7 +17,7 @@ tokio-stream = "0.1"
 async-stream = "0.3"
 dashmap = "5.5"
 sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "uuid", "postgres", "time", "chrono", "derive" ] }
-dotenv = "0.15"
+dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 once_cell = "1.21.3"
@@ -43,10 +43,6 @@ lettre = { version = "0.11", default-features = false, features = [
   "rustls-native-certs",
   "ring"
 ] }
-lettre_email = "0.9.4" # if using simple email formatting (optional)
-rustls = "0.21"
-tokio-rustls = "0.25"
-axum-server = { version = "0.6", optional = true, features = ["tls-rustls"] }
 reqwest = { version = "0.12.15", features = ["json"] }
 urlencoding = "2"
 hmac = "0.12"
@@ -61,10 +57,6 @@ sentry-tracing = "0.45.0"
 hyper = "1"
 mockall = "0.13.1"
 httpmock = "0.7"
-
-[features]
-default = []
-tls = ["axum-server/tls-rustls"]
 
 [profile.dev]
 incremental = true
