Correct verification email resurface
lint and sql prepare fixes

ts build

corrected code conditional

Corrects resend verification api base url

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -28,8 +28,6 @@ JWT_ISSUER=https://localhost:3000
 JWT_AUDIENCE=https://localhost:5173
 JWT_SECRET=CHANGEME_JWT_SECRET # Generate unique secret per environment through vault tooling
 ENV=development
-DEV_CERT_LOCATION=../../../certs/localhost+2.pem
-DEV_KEY_LOCATION=../../../certs/localhost+2-key.pem
 WEBHOOK_SECRET=CHANGEME_WEBHOOK_SIGNING_SECRET # Issue via vault; 32+ random bytes and 8+ unique chars
 GOOGLE_CLIENT_ID=CHANGEME_GOOGLE_CLIENT_ID # Create OAuth client per environment
 GOOGLE_CLIENT_SECRET=CHANGEME_GOOGLE_CLIENT_SECRET # Store only in managed secret vault
@@ -46,6 +44,8 @@ RATE_LIMITER_MILLISECONDS=250
 RATE_LIMITER_BURST=12
 RATE_LIMITER_AUTH_SECONDS=1
 RATE_LIMITER_AUTH_BURST=15
+RATE_LIMITER_VERIFY_SECONDS=60
+RATE_LIMITER_VERIFY_BURST=2
 WORKER_USE_LEASES=true # enable leases/concurrency path
 WORKER_LEASE_SECONDS=15 # heartbeat/lease duration
 RUN_RETENTION_DAYS=30 # retention purge window
