Implemented encryption on api keys and secrets

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -72,6 +72,8 @@ GOOGLE_INTEGRATIONS_CLIENT_ID=
 GOOGLE_INTEGRATIONS_CLIENT_SECRET=
 GOOGLE_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/google/callback
 OAUTH_TOKEN_ENCRYPTION_KEY=
+OLD_API_SECRETS_ENCRYPTION_KEY=
+API_SECRETS_ENCRYPTION_KEY=
 SLACK_INTEGRATIONS_CLIENT_ID=
 SLACK_INTEGRATIONS_CLIENT_SECRET=
 SLACK_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/slack/callback
@@ -120,6 +122,7 @@ STRIPE_WORKSPACE_PRICE_ID=
 #GOOGLE_INTEGRATIONS_CLIENT_SECRET=
 #GOOGLE_INTEGRATIONS_REDIRECT_URI=
 #OAUTH_TOKEN_ENCRYPTION_KEY=
+#API_SECRETS_ENCRYPTION_KEY=
 #SLACK_INTEGRATIONS_CLIENT_ID=9737696475138.
 #SLACK_INTEGRATIONS_CLIENT_SECRET=
 #SLACK_INTEGRATIONS_REDIRECT_URI=
