Fixed workspace member limits and run limit pulling from env vars

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -83,6 +83,13 @@ SLACK_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/slack/callback
 WORKSPACE_PLAN_PRICE=\$29/mo
 #################
 
+#### Workspace Quotas
+# Workspace membership cap (combined members + pending invites)
+WORKSPACE_MEMBER_LIMIT=8
+# Monthly run allocation for workspace plans
+WORKSPACE_MONTHLY_RUN_LIMIT=20000
+#################
+
 #### Stripe Integration
 STRIPE_CLIENT_ID=
 STRIPE_SECRET_KEY=
