Implement stripe workflow execution overage billing
Fix quantity listed on overage

Fixed type mismatch

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -95,6 +95,7 @@ STRIPE_CLIENT_ID=
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 STRIPE_WORKSPACE_PRICE_ID=
+STRIPE_OVERAGE_PRICE_ID=
 #################
 
 # Security hardening: when ENV=production, built-in SSRF protections block localhost,
