--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,30 +1,25 @@
-# Stage 1: build the Rust binary
-FROM rust:1.90 as builder
+# Stage 1: build the Rust backend
+FROM rust:1.91.1 as builder
 
 WORKDIR /app
 
-# Cache dependencies
-COPY Cargo.toml Cargo.lock ./
-# If you have a workspace, copy only what is needed for backend build context
+# Copy backend only
 COPY backend ./backend
 
-# Build release binary for the backend
-RUN cd backend && cargo build --release
+# Build release binary
+WORKDIR /app/backend
+RUN cargo build --release
 
 # Stage 2: minimal runtime image
 FROM debian:bookworm-slim
 
-# Install CA certs so TLS works
-RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
+RUN apt-get update \
+    && apt-get install -y ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Copy the compiled binary from builder
-# Adjust the path or binary name if yours is different
 COPY --from=builder /app/backend/target/release/dsentr-backend /usr/local/bin/dsentr-backend
-
-# If you need migrations or other runtime assets, copy them here
-# COPY backend/migrations ./migrations
 
 ENV RUST_LOG=info
 ENV PORT=10000
