Updated stripe overage to modern endpoint
test fixes

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -96,6 +96,8 @@ STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 STRIPE_WORKSPACE_PRICE_ID=
 STRIPE_OVERAGE_PRICE_ID=
+# Meter event name configured on the Stripe billing meter used for workspace run overages
+STRIPE_WORKSPACE_METER_EVENT_NAME=overage_meter
 #################
 
 # Security hardening: when ENV=production, built-in SSRF protections block localhost,
