Change logs list more information
update sql cache

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -100,6 +100,8 @@ STRIPE_OVERAGE_PRICE_ID=
 STRIPE_WORKSPACE_METER_EVENT_NAME=overage_meter
 #################
 
+RUNAWAY_LIMIT_5MIN=500
+
 # Security hardening: when ENV=production, built-in SSRF protections block localhost,
 # RFC1918, link-local, and common metadata endpoints.
 
