--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -35,6 +35,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.5",
     "typescript": "~5.7.2",
+    "typescript-eslint": "^8.26.1",
     "vite": "^6.4.1"
   }
 }
