--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@tailwindcss/vite": "^4.1.5",
+    "@types/node": "^22.15.15",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
@@ -31,11 +32,13 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "postcss": "^8.4.32",
+    "globals": "^16.0.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.5",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.4.1"
+    "vite": "^6.4.1",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
