Update cors to accept admin pages

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -2,6 +2,7 @@
 PORT=3000
 DATABASE_URL=postgres://CHANGEME_DB_USER:CHANGEME_DB_PASSWORD@localhost/CHANGEME_DB_NAME # Managed via vault per SECURITY.md
 FRONTEND_ORIGIN=https://localhost:5173
+ADMIN_ORIGIN=
 AUTH_COOKIE_SECURE=false # Force true in production to send cookies only over HTTPS
 SMTP_USERNAME=CHANGEME_SMTP_USERNAME # Provision via vault per SECURITY.md
 SMTP_PASSWORD=CHANGEME_SMTP_PASSWORD # Rotate according to SECURITY.md cadence
