--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dsentr-backend"
-version = "0.2.4"
+version = "0.2.5"
 edition = "2021"  # 👈 reverting to "2021" for now - most crates aren't tested on 2024 yet
 
 [dependencies]
@@ -16,7 +16,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
 async-stream = "0.3"
 dashmap = "5.5"
-sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "uuid", "postgres", "time", "chrono", "derive" ] }
+sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "uuid", "postgres", "time", "chrono", "derive", "ipnetwork" ] }
 dotenv = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
