Icon adjustments. Modify backend build workflow not to build when no changes on backend

--- a/.github/workflows/backend-docker.yml
+++ b/.github/workflows/backend-docker.yml
@@ -3,8 +3,12 @@ name: Backend CI + Docker Deploy
 on:
   push:
     branches: [ master ]
+    paths:
+      - "backend/**"
   pull_request:
     branches: [ master ]
+    paths:
+      - "backend/**"
 
 jobs:
   backend-ci-docker-deploy:
