Update dependency check workflows to only run for frontend or backend separately

--- a/.github/workflows/frontend-dependency-audit.yml
+++ b/.github/workflows/frontend-dependency-audit.yml
@@ -1,8 +1,10 @@
-name: Dependency Audit
+name: Frontend Dependency Audit
 
 on:
   push:
     branches: [master]
+    paths:
+      - "frontend/**"
   pull_request:
 
 permissions:
