Implementation for Asana integration and workflow node

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -78,6 +78,9 @@ API_SECRETS_ENCRYPTION_KEY=
 SLACK_INTEGRATIONS_CLIENT_ID=
 SLACK_INTEGRATIONS_CLIENT_SECRET=
 SLACK_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/slack/callback
+ASANA_INTEGRATIONS_CLIENT_ID=
+ASANA_INTEGRATIONS_CLIENT_SECRET=
+ASANA_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/asana/callback
 #################################
 
 #### Plan Pricing
@@ -139,6 +142,9 @@ RUNAWAY_LIMIT_5MIN=500
 #SLACK_INTEGRATIONS_CLIENT_ID=9737696475138.
 #SLACK_INTEGRATIONS_CLIENT_SECRET=
 #SLACK_INTEGRATIONS_REDIRECT_URI=
+#ASANA_INTEGRATIONS_CLIENT_ID=
+#ASANA_INTEGRATIONS_CLIENT_SECRET=
+#ASANA_INTEGRATIONS_REDIRECT_URI=
 #################################
 
 #### Plan Pricing
