--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "dev:api:watch": "cd ../backend && cargo watch -x run"
   },
   "dependencies": {
+    "@googleworkspace/drive-picker-react": "^0.1.3",
     "@stripe/stripe-js": "^4.8.0",
     "@xyflow/react": "^12.8.5",
     "acorn": "^8.15.0",
