Update backend to run locally

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -20,7 +20,7 @@ SENDGRID_API_KEY=
 MAILJET_API_KEY=xxxx
 MAILJET_SECRET_KEY=yyyy
 MAILJET_FROM_EMAIL=no-reply@dsentr.com
-MAILJET_FROM_NAME=DSentr Automation
+MAILJET_FROM_NAME="DSentr Automation"
 API_DEV_URL=https://localhost:3000
 API_PROD_URL=https://api.dsentr.com
 EMAIL_VERIFICATION_PATH=/verify-email?token=
