--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -17,7 +17,7 @@ tokio-stream = "0.1"
 async-stream = "0.3"
 dashmap = "5.5"
 sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "uuid", "postgres", "time", "chrono", "derive", "ipnetwork" ] }
-dotenv = "0.15"
+dotenvy = "0.15"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 once_cell = "1.21.3"
