Implementation of Notion action node

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -81,6 +81,11 @@ SLACK_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/slack/callback
 ASANA_INTEGRATIONS_CLIENT_ID=
 ASANA_INTEGRATIONS_CLIENT_SECRET=
 ASANA_INTEGRATIONS_REDIRECT_URI=https://localhost:3000/api/oauth/asana/callback
+NOTION_INTEGRATIONS_CLIENT_ID=
+NOTION_INTEGRATIONS_CLIENT_SECRET=
+NOTION_INTEGRATIONS_REDIRECT_URI=http://localhost:3000/api/oauth/notion/callback
+NOTION_INTEGRATIONS_AUTHORIZATION_URL=
+
 #################################
 
 #### Plan Pricing
